force-app/main/default/objects/MessagingSession/fields/IsAutomaticallyClose__c.field-meta.xml
<CustomField>
    <fullName>IsAutomaticallyClose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automatically Close</label>
    <type>Checkbox</type>
</CustomField>