force-app/main/default/objects/MessagingSession/fields/IsAutomaticallyCloseDate__c.field-meta.xml
<CustomField>
    <fullName>IsAutomaticallyCloseDate__c</fullName>
    <label>Is Automatically Close Date</label>
    <type>DateTime</type>
</CustomField>