force-app/main/default/objects/MessagingSession/fields/LastAgentMessage__c.field-meta.xml
<CustomField>
    <fullName>LastAgentMessage__c</fullName>
    <label>Last Agent Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>