force-app/main/default/objects/MessagingSession/fields/LastAgentMessageDate__c.field-meta.xml
<CustomField>
    <fullName>LastAgentMessageDate__c</fullName>
    <label>Last Agent Message Date</label>
    <type>DateTime</type>
</CustomField>