force-app/main/default/objects/MessagingSession/fields/LastCustomerMessage__c.field-meta.xml
<CustomField>
    <fullName>LastCustomerMessage__c</fullName>
    <label>Last Customer Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>