force-app/main/default/objects/MessagingSession/fields/LastCustomerMessageDate__c.field-meta.xml
<CustomField>
    <fullName>LastCustomerMessageDate__c</fullName>
    <label>Last Customer Message Date</label>
    <type>DateTime</type>
</CustomField>